--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -1,30 +1,28 @@
 doctype html
-html(ng-app="miApp")
-  head
-    title Andalucía HeatMap
+html
+    head
+        title Quick Start - Leaflet
+        meta(charset='utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1.0')
+        link(rel='shortcut icon', type='image/x-icon', href='docs/images/favicon.ico')
+        link(rel='stylesheet', href='https://unpkg.com/leaflet@1.2.0/dist/leaflet.css', integrity='sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ==', crossorigin='')
+        script(src='https://unpkg.com/leaflet@1.2.0/dist/leaflet.js', integrity='sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==', crossorigin='')
+        script(src='/maps/heat.js')
+    body
+        #mapid(style='width: 1050; height: 500px;')
+        script.
 
-    //Google Fonts
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Passion+One', type='text/css')
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Passion+One',type='text/css')
-    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Oxygen',type='text/css')
-    link(rel='stylesheet', href='http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css')
-    link(rel='stylesheet', href='/angular-material-data-table/dist/md-data-table.min.css')
-    link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
-    base(href="/")
-    link(rel="stylesheet" , href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
-
-    link(rel='stylesheet', href='/stylesheets/style.css')
-
-body(ng-cloak, layout="row", layout-align="center start", layout-fill)
-
-  p HEATMAP
-  script(src = "https://code.jquery.com/jquery-3.1.1.min.js",integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=",crossorigin="anonymous")
-  script(src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular.min.js")
-
-  script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-animate.min.js")
-  script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-aria.min.js")
-  script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.9/angular-messages.min.js")
-  script(src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
-  script(src="/angular-material-data-table/dist/md-data-table.min.js")
-  script(src='/ng-lodash/build/ng-lodash.min.js')
-  script(src="/dist/auth.min.js")
+            var mymap = L.map('mapid').setView([37.140, -2.78], 10);
+            var eljson = !{datosBrutos};
+            console.log("eljson ",eljson)
+            var heat = L.heatLayer(eljson, {
+                radius: 25,
+                max: 1000000
+            }).addTo(mymap);
+            L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+                maxZoom: 18,
+                attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
+                '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+                'Imagery © <a href="http://mapbox.com">Mapbox</a>',
+                id: 'mapbox.streets'
+            }).addTo(mymap);
